resources/assets/styles/components/_callout.scss
.utk-callout {
  border-radius: $golden-ratio-0;
  overflow: hidden;

  &--style {
    &-default {
      background-color: $gray-0;
    }

    &-smokey {
      background-color: $smokey;
    }

    &-globe {
      background-color: $globe;
    }

    &-smokey,
    &-globe {
      h3,
      p {
        color: $white;
      }
    }
  }

  .utk-callout--inner {
    display: flex;
    flex-direction: row-reverse;
    align-items: end;
    min-height: $golden-ratio-7;
    max-height: 400px !important;
    overflow: hidden;

    @include respond(xs, sm) {
      flex-direction: column-reverse !important;
      max-height: none !important;
    }

    .utk-callout--content {
      padding: $golden-ratio-4;
      align-self: flex-end;
      min-width: $gr-short;

      @include respond(sm) {
        padding: $golden-ratio-2 $golden-ratio-4 $golden-ratio-4;
      }

      @include respond(xs) {
        padding: $golden-ratio-2 $golden-ratio-3 $golden-ratio-4;
      }

      &::before {
        display: block;
        width: 100%;
        height: $golden-ratio-0;
        background-color: $orange;
        content: " ";
        max-width: $golden-ratio-5;
        margin: 0 0 $golden-ratio-2;
      }

      h3 {
        font-weight: 700;
        font-size: $type-4;
        line-height: 1.18em;
        margin-bottom: $golden-ratio-1;

        @include respond(xs, sm, md) {
          font-weight: 700;
          font-size: $type-3;
        }
      }

      p {
        font-size: $type-2;
        margin: 0 0 $golden-ratio-2;
      }
    }

    .utk-callout--image {
      margin: 0;
      min-width: $gr-long;
      max-width: 100%;
      align-self: flex-end;
      clip-path: polygon(0 0, 100% 0, 100% 100%, $golden-ratio-4 100%);
      position: relative;

      @include respond(xs, sm) {
        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - #{$golden-ratio-4})) !important;
      }

      .utk-image--caption {
        position: absolute;
        bottom: 0;
        padding: $golden-ratio-6 45% $golden-ratio-4 $golden-ratio-4;
        line-height: 1.47em;
        font-size: $type-1;
        width: 100%;
        color: $gray-1;
        font-style: italic;
        -webkit-font-smoothing: antialiased;
        display: block;

        @include respond(xs, sm) {
          padding: $golden-ratio-6 $golden-ratio-4 $golden-ratio-4 45%;
          text-align: right;
        }

        @include respond(xs) {
          font-size: $type-0;
          position: relative;
          padding: $golden-ratio-1 $golden-ratio-3;
          background: $smokey !important;
          background-color: $smokey !important;
        }

        @include filter-gradient(rgba($smokeyx, 0), 0, rgba($smokeyx, 0.76), 47%);
        @include inverted-body-link();

        > span {
          margin-right: $golden-ratio-0;
          text-shadow: $box-shadow;
        }

        a {
          text-transform: uppercase;
          font-size: $type-0;
          font-style: normal !important;
          display: inline-flex;
          flex-wrap: nowrap;
          align-items: center;
          text-shadow: none;

          span {
            margin-left: 3px;
            color: $orange !important;
          }
        }
      }

      img {
        display: block;
        width: 100%;
        max-width: 100%;
        height: auto;
      }
    }

    &.utk-callout--orientation-left {
      flex-direction: row-reverse;

      .utk-callout--image {
        clip-path: polygon(0 0, calc(100% - #{$golden-ratio-4}) 0, 100% 100%, 0 100%);
      }
    }

    &.utk-callout--orientation-right {
      flex-direction: row;

      .utk-callout--image {
        clip-path: polygon(0 0, 100% 0, 100% 100%, $golden-ratio-4 100%);

        .utk-image--caption {
          padding: $golden-ratio-6 $golden-ratio-4 $golden-ratio-4 45%;
          text-align: right;
        }
      }
    }
  }
}

.section-callout {
  .utk-callout {
    width: 100%;
    position: relative;
    display: block;
  }
}

